--- a/src/app.css
+++ b/src/app.css
@@ -1,14 +1,29 @@
 * {
- box-sizing: border-box;
+	box-sizing: border-box;
 }
 
-html {
- height: 100dvh;
- width: 100dvw;
+img,
+picture,
+video,
+canvas,
+svg {
+	display: block;
+	max-width: 100%;
 }
 
 body {
- height:100%;
- display: grid;
- place-content: center;
+	height: 100%;
+	font-family: 'Playfair Display', serif;
+	font-optical-sizing: auto;
+	font-style: normal;
+	background: #faf9f7;
+	background: -webkit-linear-gradient(to right, #ffffff, #faf9f7);
+	background: linear-gradient(to right, #ffffff, #faf9f7);
+	padding: 0;
+	margin: 0;
+}
+
+p {
+	font-size: 18px;
+	line-height: 32px;
 }
