--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,8 @@ import { Image } from 'astro:assets';
      alt="Tamiko Andrews headshot"
      densities={[1.5, 2]}
      quality="mid"
+     width="450"
+     loading="lazy"
      class="headshot"
     />
    </div>
@@ -42,7 +44,7 @@ import { Image } from 'astro:assets';
       style="justify-content: center;">
       <AnchorButton
        buttonText="View my work"
-       link="www.google.com"
+       link="https://www.instagram.com/tamiko_andrews"
        linkTarget="_blank"
       />
       <AnchorButton
