chore: wording fix

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -53,8 +53,8 @@ import Layout from "../layouts/Layout.astro";
           <input name="event-date" id="event-date" required type="date" />
         </div>
         <div class="input-container">
-          <label for="project">Project Details</label>
-          <textarea name="project" id="project" type="text"> </textarea>
+          <label for="event">Event Details</label>
+          <textarea name="event" id="event" type="text"> </textarea>
         </div>
         <input type="submit" value="Submit" />
       </form>
